<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity2">

    <EditText
        android:id="@+id/etIP"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:hint="@string/ip_address"
        android:inputType="text"
        android:autofillHints=""
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/etPort"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etIP"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:hint="@string/port_no"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSend"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:hint="@string/enter_message"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="323dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:onClick="send"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="197dp"
        android:textSize="20sp" />
</RelativeLayout>